# kalamche

./: .gitignore  README.md
backend/: .env.example  README.md  compose.yaml  docker-compose.yml  docs.md  drizzle.config.ts  eslint.config.mjs  package.json  (+1 more)
backend/rust/: .env.example  Cargo.toml  Dockerfile  compose.yml  diesel.toml
backend/rust/.cargo/: config.toml
backend/rust/crates/adapters/: Cargo.toml
backend/rust/crates/adapters/src/oauth/: github.rs
backend/rust/crates/api/: Cargo.toml
backend/rust/crates/api/src/: containter.rs  context.rs  lib.rs
backend/rust/crates/api/src/common/: oauth.rs  user.rs
backend/rust/crates/api/src/ppt/: list_all_plans.rs  mod.rs  purchase_fr_token.rs
backend/rust/crates/api/src/ppt/wallet/: create.rs
backend/rust/crates/api/src/product/: search.rs
backend/rust/crates/api/src/user/: create.rs  login.rs  mod.rs  oauth_authorize.rs  refresh_token.rs  register.rs  resend_verification.rs  resend_verification_email.rs
backend/rust/crates/api/src/wallet/: mod.rs  purchase_fr_token.rs
backend/rust/crates/api_common/: Cargo.toml
backend/rust/crates/api_common/src/: context.rs  image.rs  lib.rs  oauth_provider.rs  product.rs  user.rs  utils.rs  wallet.rs
backend/rust/crates/api_crud/: Cargo.toml
backend/rust/crates/api_crud/src/user/: create.rs  mod.rs  my_user.rs  update.rs
backend/rust/crates/api_crud/src/wallet/: create.rs
backend/rust/crates/config/: Cargo.toml
backend/rust/crates/config/src/: error.rs  lib.rs
backend/rust/crates/config/src/auth/: mod.rs  oauth.rs  password.rs  token.rs
backend/rust/crates/config/src/cache/: cache.rs  mod.rs  token.rs
backend/rust/crates/config/src/setting/: mod.rs  structs.rs
backend/rust/crates/database/: Cargo.toml
backend/rust/crates/database/src/: connection.rs  lib.rs  migration.rs  seed.rs
backend/rust/crates/database/src/impls/: fr_token_plan.rs  login_token.rs  mod.rs  oauth_account.rs  payment_history.rs  pending_user.rs  permission.rs  user.rs  user_permission.rs
backend/rust/crates/database/src/source/: fr_token.rs  login_token.rs  mod.rs  oauth_account.rs  payment_history.rs  pending_user.rs  permission.rs  user.rs  user_permissin.rs  wallet.rs
backend/rust/crates/db_schema/: Cargo.toml
backend/rust/crates/db_schema/src/: connection.rs  lib.rs  migration.rs  schema.rs  schema_setup.rs  seed.rs
backend/rust/crates/db_schema/src/impls/: fr_token_plan.rs  image.rs  login_token.rs  mod.rs  oauth_account.rs  payment_history.rs  pending_user.rs  permission.rs  product.rs  role.rs  shop.rs  user.rs  user_permission.rs  user_role.rs  wallet.rs
backend/rust/crates/db_schema/src/source/: fr_token_plan.rs  image.rs  login_token.rs  mod.rs  oauth_account.rs  payment_history.rs  pending_user.rs  permission.rs  product.rs  role.rs  role_permission.rs  shop.rs  shop_rate.rs  user.rs  user_permissin.rs  user_role.rs  wallet.rs
backend/rust/crates/db_seed/: Cargo.toml
backend/rust/crates/db_seed/datasets/: categories.json
backend/rust/crates/db_seed/src/: deserialize.rs  fs.rs  main.rs  parser.rs  structs.rs
backend/rust/crates/db_view/: Cargo.toml
backend/rust/crates/db_view/src/: structs.rs
backend/rust/crates/db_view/src/user/: user_view.rs
backend/rust/crates/entity/: Cargo.toml
backend/rust/crates/entity/src/: fr_token.rs  fr_token_plan.rs  lib.rs  login_token.rs  oauth_account.rs  payment_hisotry.rs  payment_history.rs  pending_user.rs  permission.rs  prelude.rs  sea_orm_active_enums.rs  user.rs  user_permission.rs  wallet.rs
backend/rust/crates/migration/src/: lib.rs  m20250307_203232_user.rs  m20250307_204900_permission.rs  m20250307_204908_user_permission.rs  m20250310_081058_oauth_account.rs  m20250310_081111_login_token.rs  m20250312_190334_pending_users.rs  m20250402_132748_fr_token_plans.rs  m20250402_132846_payment_histories.rs  m20250402_132905_wallets.rs
backend/rust/crates/routes/: Cargo.toml
backend/rust/crates/routes/src/: lib.rs
backend/rust/crates/routes/src/images/: download.rs  mod.rs  upload.rs  utils.rs
backend/rust/crates/routes/src/middleware/: authorization.rs
backend/rust/crates/server/: Cargo.toml
backend/rust/crates/server/src/: lib.rs  main.rs  routes_v1.rs
backend/rust/crates/utils/: Cargo.toml
backend/rust/crates/utils/src/: cache.rs  email.rs  error.rs  image.rs  lib.rs  oauth.rs
backend/rust/crates/utils/src/oauth/: discord.rs  github.rs  mod.rs  oauth_client.rs
backend/rust/crates/utils/src/payment/: mod.rs  stripe.rs  structs.rs  zibal.rs
backend/rust/crates/utils/src/rate_limit/: mod.rs  rate_limiter.rs
backend/rust/crates/utils/src/setting/: mod.rs  structs.rs
backend/rust/crates/utils/src/settings/: mod.rs  structs.rs
backend/rust/crates/utils/src/utils/: cache.rs  email.rs  hash.rs  mod.rs  oauth.rs  random.rs  temp_file.rs  token.rs  validation.rs
backend/rust/migrations/2025-04-08-165408_create_user/: up.sql
backend/rust/migrations/2025-04-08-165412_create_permission/: down.sql  up.sql
backend/rust/migrations/2025-04-08-165416_create_user_permission/: down.sql  up.sql
backend/rust/migrations/2025-04-08-165426_create_oauth_account/: down.sql  up.sql
backend/rust/migrations/2025-04-08-165434_create_login_token/: down.sql  up.sql
backend/rust/migrations/2025-04-08-165442_create_pending_user/: down.sql  up.sql
backend/rust/migrations/2025-04-08-165449_create_fr_token_plan/: down.sql  up.sql
backend/rust/migrations/2025-04-08-165459_create_payment_history/: down.sql  up.sql
backend/rust/migrations/2025-04-08-165504_create_wallet/: down.sql  up.sql
backend/rust/migrations/2025-04-17-103844_create_role/: up.sql
backend/rust/migrations/2025-04-17-103852_create_role_permission/: down.sql  up.sql
backend/rust/migrations/2025-04-17-105756_create_user_role/: down.sql  up.sql
backend/rust/migrations/2025-04-24-071235_create_image/: up.sql
backend/rust/migrations/2025-04-28-082311_create_shop/: down.sql  up.sql
backend/rust/migrations/2025-04-28-082328_create_shop_rate/: up.sql
backend/rust/migrations/2025-04-28-122610_create_product/: down.sql  up.sql
(+617 files in other folders)
