[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/api",
  "crates/utils",
  "crates/db_schema",
  "crates/server",
  "crates/api_common",
  "crates/api_crud",
  "crates/routes",
  "crates/db_view",
  "crates/db_seed",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
actix-web = "4.9.0"
actix-multipart = "0.7.2"
diesel = "2.2.7"
diesel_migrations = "2.2.0"
diesel-async = "0.5.2"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_json = "0.2.1"
chrono = "0.4.39"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
uuid = { version = "1.12.0", features = ["v4", "serde"] }
anyhow = "1.0.95"
jsonwebtoken = "9.3.0"
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "stream"] }
oauth2 = "4.4.2"
argon2 = "0.5.3"
strum = { version = "0.27", features = ["derive"] }
async-trait = "0.1"
futures = "0.3.31"
actix-cors = "0.7.1"
futures-util = "0.3.31"
async-stream = "0.3"
bytes = "1.7"
aws-sdk-s3 = "1.82.0"
sha2 = "0.10.8"
moka = { version = "0.12", features = ["future"] }
