[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
utils = { path = "../utils" }
api_common = { path = "../api_common" }
database = { path = "../database" }
tokio = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
lazy-regex = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
actix-web = { workspace = true }
reqwest = { workspace = true }
