[package]
name = "api_common"
version.workspace = true
edition.workspace = true

[dependencies]
utils = { path = "../utils" }
database = { path = "../database" }
actix-web = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
actix-web-httpauth = "0.8.2"
