[package]
name = "api_crud"
version.workspace = true
edition.workspace = true

[dependencies]
utils = { path = "../utils" }
api_common = { path = "../api_common" }
db_schema = { path = "../db_schema" }
db_view = { path = "../db_view" }
tokio = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
actix-web = { workspace = true }
reqwest = { workspace = true }
aws-sdk-s3 = { workspace = true }
