[package]
name = "config"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
