[package]
name = "database"
version.workspace = true
edition.workspace = true

[dependencies]
config = { path = "../config" }
migration = { path = "../migration" }
sea-orm = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
