[package]
name = "db_schema"
version.workspace = true
edition.workspace = true

[dependencies]
utils = { path = "../utils" }
diesel = { workspace = true, features = [
  "chrono",
  "postgres",
  "serde_json",
  "uuid",
] }
diesel_migrations = { workspace = true }
diesel-async = { workspace = true, features = ["deadpool", "postgres"] }
diesel-derive-enum = { workspace = true }
deadpool = { version = "0.12.2", features = ["rt_tokio_1"] }
tokio = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
diesel_json = { workspace = true }
