[package]
name = "db_seed"
version.workspace = true
edition.workspace = true

[dependencies]
db_schema = { path = "../db_schema" }
utils = { path = "../utils" }
serde = { workspace = true }
diesel = { workspace = true, features = [
  "chrono",
  "postgres",
  "serde_json",
  "uuid",
] }
diesel-async = { workspace = true, features = ["deadpool", "postgres"] }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
csv = "1.3.1"
anyhow = { workspace = true }
