[package]
name = "db_seed"
version.workspace = true
edition.workspace = true

[dependencies]
db_schema = { path = "../db_schema" }
serde = { workspace = true }
diesel_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
csv = "1.3.1"
