[package]
name = "routes"
version.workspace = true
edition.workspace = true

[dependencies]
api_common = { path = "../api_common" }
utils = { path = "../utils" }
db_schema = { path = "../db_schema" }
actix-web = { workspace = true }
actix-multipart = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
aws-sdk-s3 = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
