[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
api = { path = "../api" }
utils = { path = "../utils" }
database = { path = "../database" }
actix-web = { workspace = true }
reqwest = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
