[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
api = { path = "../api" }
api_common = { path = "../api_common" }
api_crud = { path = "../api_crud" }
utils = { path = "../utils" }
database = { path = "../database" }
routes = { path = "../routes" }
actix-web = { workspace = true }
reqwest = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
actix-cors = { workspace = true }
