[package]
name = "utils"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
oauth2 = { workspace = true }
argon2 = { workspace = true }
lazy-regex = { workspace = true }
redis = { workspace = true }
smart-default = "0.7.1"
