[package]
name = "utils"
version.workspace = true
edition.workspace = true

[dependencies]
smart-default = "0.7.1"
lettre = "0.11.12"
rand = "0.8"
regex = "1.11.1"
diesel = { workspace = true }
actix-web = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
oauth2 = { workspace = true }
argon2 = { workspace = true }
futures = { workspace = true }
aws-sdk-s3 = { workspace = true }
